--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,16 @@ jobs:
 
       - uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
       - name: Build and push to ACR
         run: |
           az acr build \
             --registry ${{ vars.ACR_NAME }} \
             --image hello-cicd:${{ github.sha }} \
-            .
+            --file Dockerfile .
 
       - name: Deploy to Container Apps
         run: |
@@ -42,11 +42,9 @@ jobs:
             --resource-group ${{ vars.RESOURCE_GROUP }} \
             --query "properties.configuration.ingress.fqdn" -o tsv)
 
-            sleep 30
-
-          for i in 1 2 3 4 5 6 7 8 9 10; do
-            curl -sf "https://$FQDN/health" && exit 0
-            echo "Attempt $i failed, retrying..."
+          for i in 1 2 3 4 5; do
+            curl -sf "https://$FQDN/" && exit 0
+            echo "Attempt $i failed, retrying in 10s..."
             sleep 10
           done
-          echo "Health check failed" && exit 1
+          echo "Health check failed after 5 attempts!" && exit 1
